# versort

./: .copier-answers.autopretty.yml  .pre-commit-config.yaml  .readthedocs.yml  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: automerge.yml  ci.yml
docs/: CONTRIBUTING.md  typing_extra.md
docs/reference/: base.md  cli.md
docs/reference/sorters/: pep440.md  semver.md
tests/: conftest.py  test_common.py  test_pep440.py  test_semver.py  test_style.py
versort/: __init__.py  __main__.py  base.py  cli.py  typing_extra.py
versort/sorters/: pep440.py  semver.py
