[tool.poetry]
name = "versort"
version = "0.1.0"
description = "Sort versions according to different versioning schemas"
authors = ["Jairo Llopis <jairo.llopis@tecnativa.com>"]
license = "BOOST-1.0"

[tool.poetry.scripts]
versort = "versort.cli:VerSortApp.run"

[tool.poetry.dependencies]
python = "^3.8"
packaging = "^20.7"
plumbum = "^1.6.9"
semver = "^2.13.0"
mkdocstrings = {version = "^0.13.6", optional = true}
mkdocs-material = {version = "^6.1.7", optional = true}

[tool.poetry.extras]
docs = ["mkdocstrings", "mkdocs-material"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
pre-commit = "^2.9.2"
flake8 = "^3.8.4"
pytest-xdist = "^2.1.0"
mypy = "^0.790"
pytest-mypy = "^0.8.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
